@@ -1,4 +1,5 @@
 0.6.6
+- In netcap, make sure readlink is handled properly
 
 0.6.5
 - Fix self test build problem on clean system (Sterling X. Winter)
